# question-answering

./: .gitignore  Encoding.ipynb  Encoding.py  README.md  SQuAD_analysis (1).ipynb  SQuAD_analysis.ipynb  Test_dataset.py  Testing.ipynb  compute_answers.py  config.py  dataset.py  environment.yml  environment_explicit.yml  main.py  pyproject.toml  squad.py  test_dataset.py  testing.ipynb  tiny_proto.ipynb  training.ipynb  training.py
src/: .gitignore  README.md  requirements.txt  training.ipynb
