[tool.poetry]
name = "question-answering"
version = "0.1.0"
description = "Question Answering on the SQuAD 1.1 dataset."
authors = [
    "Francesco Ballerini <francesco.ballerini3@studio.unibo.it>",
    "Emmanuele Bollino <emmanuele.bollino@studio.unibo.it>",
    "Tommaso Giannuli <tommaso.giannuli@studio.unibo.it>",
    "Manuel Mariani <manuel.mariani2@studio.unibo.it>"]

[tool.poetry.dependencies]
python = "^3.8.1"
transformers = "4.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
